# aimSoloAnalysis

./: .gitignore  ADVANCED_INSIGHTS_RND.md  AGENTS.md  AIM_SOLO_PLAN.md  AI_GUIDE.md  ARCHITECTURE.md  BUILD_PLAN.md  CLAUDE.md  IMPERIAL_CONVERSION_PLAN.md  INSIGHT_COPY_TEMPLATES.md  INSIGHT_LEAN_PROXY.md  INSIGHT_LIGHT_BRAKE_THROTTLE.md  INSIGHT_SYNTHESIS_ALGORITHM.md  INSIGHT_SYNTHESIS_OUTLINE.md  LINE_STDDEV_RESEARCH.md  ML_DATA_COLLECTION_PLAN.md  PLANNER_BOOTSTRAP.md  PLANNER_PROMPT_TEMPLATE.md  PROGRESS_AIMSOLO_XRK.txt  PROJECT_BOOTSTRAP.md  README.md  REQUIREMENTS_BASELINE.md  RULES_SIGNALS_SYNTHESIS_CHECKLIST.md  SEGMENTATION_DEFAULTS.md  TASKS.md  TASK_PROMPTS_TONIGHT_TOP1.md  TASK_PROMPTS_WAVE2.md  TRACKSIDE_RULES.md  UX_SPEC.md  You are generating implementation t.txt  aim_csv_ingestion_design.md  aimsolo.db  package.json  pyproject.toml  requirements.txt  robust-segmenting-algorithm.md
analytics/: deltas.py  metrics_writer.py  reference.py  segment_metrics.py  segments.py
api/: app.py  units.py
artifacts/: frontend_eval_report.json  project_bootstrap.json  unified_scorecard.json
docs/: INVESTIGATION.md  TA_DID_VS_SHOULD_v1.0.md  TA_SCORECARD_v1.0.md  insight_design.md  python_test_environment.md  release_gate_workflow.md  top1_review_packet_workflow.md  ui_v2_api_contract_v1.md  ui_v2_architecture_v1.md  wsl2_native_js_ui_design.md
domain/: run_data.py
storage/: db.py  schema.sql
test_data/: 38.csv  42.csv  58.csv  61.csv  70.csv  87.csv
tests/: test_api_export.py  test_api_import.py  test_bootstrap_refresh.py  test_compare_endpoint.py  (+21 more)
(+73 files in other folders)
